--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-marquease": "^0.1.6",
