--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@szhsin/react-menu": "^3.5.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
     "framer-motion": "^10.10.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
