--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.10.0",
+    "fslightbox-react": "^1.7.4",
+    "lightbox.js-react": "^0.6.4",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-marquease": "^0.1.6",
     "react-pdf": "^7.0.1",
+    "react-photo-album": "^2.2.2",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yet-another-react-lightbox": "^3.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
